--- a/.github/workflows/maui.yml
+++ b/.github/workflows/maui.yml
@@ -83,6 +83,7 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Install .NET 6.0.2-preview.22055.15 + .NET MAUI Workload
+        shell: pwsh
         run: |
           wget https://dot.net/v1/dotnet-install.ps1 -OutFile C:\dotnet-install.ps1
           C:\dotnet-install.ps1 -Version 6.0.200-preview.22055.15
