--- a/.github/workflows/maui.yml
+++ b/.github/workflows/maui.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Install .NET 6.0.2-preview.22055.15 + .NET MAUI Workload
         shell: pwsh
         run: |
-          wget https://dot.net/v1/dotnet-install.ps1 -OutFile C:\dotnet-install.ps1
+          curl -OL https://dot.net/v1/dotnet-install.ps1 C:\dotnet-install.ps1
           C:\dotnet-install.ps1 -Version 6.0.200-preview.22055.15
           dotnet workload install maui
 
@@ -102,6 +102,7 @@ jobs:
       - name: Restore NuGet
         run: |
           dotnet restore ./src
+
       - name: Build Windows App
         run: |
           dotnet build ./src
