--- a/.github/workflows/maui.yml
+++ b/.github/workflows/maui.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Install .NET 6.0.2-preview.22055.15 + .NET MAUI Workload
         shell: pwsh
         run: |
-          curl -OL https://dot.net/v1/dotnet-install.ps1 C:\dotnet-install.ps1
+          curl -L https://dot.net/v1/dotnet-install.ps1 -O C:\dotnet-install.ps1
           C:\dotnet-install.ps1 -Version 6.0.200-preview.22055.15
           dotnet workload install maui
 
