--- a/.github/workflows/maui.yml
+++ b/.github/workflows/maui.yml
@@ -87,7 +87,7 @@ jobs:
         run : |
           curl -OL https://dot.net/v1/dotnet-install.ps1
           powershell ./dotnet-install.ps1 -Version 6.0.200-preview.22055.15
-          echo "${HOME}\\AppData\\Local\\Microsoft\\dotnet" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo "C:\Users\runneradmin\AppData\Local\Microsoft\dotnet\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
           dotnet --info
           dotnet workload install maui
 
