--- a/.github/workflows/maui.yml
+++ b/.github/workflows/maui.yml
@@ -15,9 +15,13 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install .NET 6.0.2-preview.22055.15 + .NET MAUI Workload
+      - name: Setup .NET v6.0
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: "6.0.x"
+
+      - name: Install .NET MAUI Workload
         run: |
-          curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 6.0.200-preview.22055.15 --quality preview
           dotnet workload install maui
 
       - name: Restore NuGet
@@ -34,9 +38,13 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install .NET 6.0.2-preview.22055.15 + .NET MAUI Workload
+      - name: Setup .NET v6.0
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: "6.0.x"
+
+      - name: Install .NET MAUI Workload
         run: |
-          curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 6.0.200-preview.22055.15 --quality preview
           dotnet workload install maui
 
       - name: Restore NuGet
@@ -58,9 +66,13 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install .NET 6.0.2-preview.22055.15 + .NET MAUI Workload
+      - name: Setup .NET v6.0
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: "6.0.x"
+
+      - name: Install .NET MAUI Workload
         run: |
-          curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 6.0.200-preview.22055.15 --quality preview
           dotnet workload install maui
 
       - name: Restore NuGet
@@ -82,12 +94,13 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Install .NET 6.0.2-preview.22055.15 + .NET MAUI Workload
-        shell: pwsh
-        run : |
-          curl -OL https://dot.net/v1/dotnet-install.ps1
-          powershell ./dotnet-install.ps1 -Version 6.0.200-preview.22055.15 -InstallDir "C:\Program Files\dotnet\sdk"
-          dotnet --info
+      - name: Setup .NET v6.0
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: "6.0.x"
+
+      - name: Install .NET MAUI Workload
+        run: |
           dotnet workload install maui
 
       - uses: actions/setup-java@v2
