--- a/.github/workflows/maui.yml
+++ b/.github/workflows/maui.yml
@@ -94,6 +94,11 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'microsoft'
+          java-version: '17'
+
       - name: Setup .NET v6.0
         uses: actions/setup-dotnet@v1
         with:
@@ -101,17 +106,7 @@ jobs:
 
       - name: Install .NET MAUI Workload
         run: |
-          dotnet workload install maui
-
-      - uses: actions/setup-java@v2
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-
-      - name: Maui Check
-        run: |
-          dotnet tool install -g Redth.Net.Maui.Check
-          maui-check --non-interactive --fix --ci --skip xcode --skip VisualStudioWindowsCheckup
+          dotnet workload install maui  
 
       - name: Restore NuGet
         run: |
