--- a/.github/workflows/maui.yml
+++ b/.github/workflows/maui.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build Android App
         run: |
-          dotnet build ./ -f net8.0-android
+          dotnet build -f net8.0-android -c Release
 
   Build_iOS:
     runs-on: macos-14
@@ -63,7 +63,7 @@ jobs:
 
       - name: Build iOS App
         run: |
-          dotnet build ./ -f net8.0-ios
+          dotnet build -f net8.0-ios -c Release
           
   Build_MacCatalyst:
     runs-on: macos-14
@@ -91,7 +91,7 @@ jobs:
 
       - name: Build macOS App
         run: |
-          dotnet build ./ -f net8.0-maccatalyst
+          dotnet build -f net8.0-maccatalyst -c Release
 
   Build_Windows:
     runs-on: windows-latest
@@ -119,4 +119,4 @@ jobs:
 
       - name: Build Windows App
         run: |
-          dotnet build ./
+          dotnet build -c Release
